code25_all/python/2152463.txt
>>> python /Users/[myname]/Desktop/setuptools-0.6c11/ez_setup.py 
  File "<stdin>", line 1
    python /Users/[myname]/Desktop/setuptools-0.6c11/ez_setup.py 
                                                   ^
SyntaxError: invalid syntax

>>> python /Users/[myname]/Desktop/EZ_tutorial/ez_setup.py 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'python' is not defined

